--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "chart.js": "^2.9.3",
     "daisyui": "^2.42.1",
     "mdb-react-ui-kit": "^5.0.0",
     "moment": "^2.27.0",
     "react": "^18.2.0",
     "react-animated-text-content": "^1.0.1",
+    "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-moment": "^0.9.7",
